# contract_diff_engine

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
datasets/: .gitignore
docs/: v2_word_diff_audit.md  v2_word_level_diff.md  v3_phase1_reuse_plan.md
docs/architecture/: alignment-layer.md  annotation-layer.md  comparison-layer.md  day-1-summary.md
scripts/: build_real_benchmark_from_cuad.py  debug_reading_order.py  diagnose_compare.py  diagnose_visuals.py  extract_structured_pdf.py  ingest_cuad.py  normalize_cuad_local.py  profile_pdf.py  real_benchmark_helpers.py  run_real_benchmark.py  run_real_benchmark_v2.py
src/contract_diff_api/: __init__.py  main.py
tests/alignment/: __init__.py  helpers.py  test_alignment_service.py  test_anchor_selection.py  test_clause_similarity.py  test_document_similarity_service.py  test_structured_alignment.py  test_text_similarity.py
tests/annotation/: __init__.py  test_annotation_builder_service.py  test_annotation_id_service.py  test_annotation_target_resolver.py
tests/api/: test_compare_route.py  test_cors.py
tests/comparison/: test_annotation_context.py  test_clause_comparison_service.py  test_comparison_service.py  test_structured_changes.py  test_text_diff_service.py  test_text_unit_comparison_service.py  test_token_diff.py  test_word_diff.py
tests/core/: __init__.py  test_contract_diff_engine.py
tests/debugging/: test_diff_debug.py
tests/extraction/: __init__.py
tests/normalization/: test_normalization_service.py  test_text_normalizer.py
tests/rendering/: helpers.py  (+9 more)
(+202 files in other folders)
