[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-comp-engine"
version = "0.1.0"
description = "A modular engine for structural and semantic comparison of legal contracts."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "PyMuPDF>=1.24.0",
    "fastapi>=0.137.1",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
files = ["src", "tests"]
